@@ -20,6 +20,7 @@ Fixes:
 - Fix support added for pools with more than 10 vdevices.
 - Fix support added for vdevices with more than 10 devices.
 - Fix exception handling improved.
+- Fix config for DNS server configuration.
 
 Permanent restrictions:
 - No more x86 versions of NAS4Free 11 series will be made, 32-bits users need 10.3 than.
